--- a/header/index.html
+++ b/header/index.html
@@ -164,4 +164,12 @@
 		background-color: #f2f2f2;
 		cursor: not-allowed;
 	}
+
+	.loading-message{
+		color: red;
+		margin: 20px 0;
+		font-weight: bold;
+		width: 600px;
+		text-align: center;
+	}
 </style>
