--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
 
         a {
             cursor: pointer;
+            text-decoration: none;
         }
 
         sup.md-footnote {
@@ -1322,6 +1323,7 @@
         <h2><a name="工具" class="md-header-anchor"></a><span>工具</span></h2>
         <ul>
             <li><a href='./header'><span>Header</span></a></li>
+            <li><a href='./header_rotate'><span>Header ? </span><span style="transform: rotateX(180deg);display: inline-block;">🧐 ?</span></a></li>
         </ul>
     </div>
 </body>
