--- a/index.html
+++ b/index.html
@@ -1324,6 +1324,7 @@
         <ul>
             <li><a href='./header'><span>Header</span></a></li>
             <li><a href='./header_rotate'><span>Header ? </span><span style="transform: rotateX(180deg);display: inline-block;">🧐 ?</span></a></li>
+            <li><a href='./2024Christmas'><span>2024 Christmas🎄</span></a></li>
         </ul>
     </div>
 </body>
