--- a/2024Christmas/index.html
+++ b/2024Christmas/index.html
@@ -126,7 +126,7 @@
                 "任务": "重量500克以上的拟鲤",
                 "鱼种": "拟鲤",
                 "位置": "二图",
-                "type": "手杆"
+                "type": "任意"
             },
             "1.3": {
                 "任务": "浮子钓竿捕获8种类鱼",
@@ -207,16 +207,16 @@
                 "type": "任意"
             },
             "6.1": {
-                "任务": "使用纺车竿或枪柄竿重量1公斤以上的诸子鲶",
-                "鱼种": "诸子鲶",
+                "任务": "使用纺车竿或枪柄竿重量1公斤以上的诸子条",
+                "鱼种": "诸子条",
                 "位置": ["二图", "克湖"],
                 "type": "路亚"
             },
             "6.2": {
                 "任务": "自然饵累计捕获总重达30公斤的任意种类鲤鱼",
-                "鱼种": "鲤鱼",
+                "鱼种": ["普通鲤鱼", "镜鲤", "无磷鲤", "草鱼", "黑草"],
                 "位置": "梅德韦杰湖",
-                "type": "手杆"
+                "type": "任意"
             },
             "6.3": {
                 "任务": "旋转亮片捕获6种类鱼",
@@ -228,7 +228,7 @@
                 "任务": "重量7公斤以上的草鱼",
                 "鱼种": "草鱼",
                 "位置": "梅德韦杰湖",
-                "type": "手杆"
+                "type": "任意"
             },
             "7.2": {
                 "任务": "夜间使用底钓钓组捕获稀有鱼",
@@ -267,16 +267,16 @@
                 "type": "路亚"
             },
             "3.1会员": {
-                "任务": "重量1.5公斤以上的诸子鲶或圆腹雅罗鱼",
-                "鱼种": ["诸子鲶", "圆腹雅罗鱼"],
+                "任务": "重量1.5公斤以上的诸子条或圆腹雅罗鱼",
+                "鱼种": ["诸子条", "圆腹雅罗鱼"],
                 "位置": ["克湖", "老奥"],
-                "type": "路亚"
+                "type": "任意"
             },
             "3.2会员": {
                 "任务": "重量500克以上的稀有鱼",
                 "鱼种": "稀有鱼",
                 "位置": "二图",
-                "type": "手杆"
+                "type": "任意"
             },
             "3.3会员": {
                 "任务": "底钓钓具捕获5种重量1公斤以上的鱼",
@@ -294,7 +294,7 @@
                 "任务": "诱钓捕获普通鲤鱼、镜鲤和无鳞鲤",
                 "鱼种": ["普通鲤鱼", "镜鲤", "无鳞鲤"],
                 "位置": "梅德韦杰湖",
-                "type": "手杆"
+                "type": "水底"
             },
             "4.3会员": {
                 "任务": "纺车竿或枪柄竿捕获重量3公斤以上的江鳕",
@@ -354,7 +354,7 @@
                 "任务": "在旧奥斯特罗格湖捕获16种鱼类",
                 "鱼种": null,
                 "位置": "老奥",
-                "type": "路亚"
+                "type": "任意"
             },
             "8.1会员": {
                 "任务": "使用 “汲钩钓组”搭配轻型、超轻型纺车竿、枪柄竿捕获六种鱼类",
@@ -369,9 +369,9 @@
                 "type": "任意"
             },
             "8.3会员": {
-                "任务": "在任意水域捕获10重量3公斤以上的鱼",
+                "任务": "捕获10种重量3公斤以上的鱼",
                 "鱼种": null,
-                "位置": "任意水域",
+                "位置": ["克湖", "二图", "廓里湖", "老奥", "沃尔霍夫河", "梅德韦杰湖", "苏拉河", "白河"],
                 "type": "任意"
             },
             "9.1会员": {
@@ -387,10 +387,10 @@
                 "type": "手杆"
             },
             "9.3会员": {
-                "任务": "重量5公斤以上的常见鲶",
-                "鱼种": "常见鲶",
+                "任务": "重量5公斤以上的常见鲃鱼",
+                "鱼种": "常见鲃鱼",
                 "位置": ["梅德韦杰湖", "铜湖", "琥珀湖"],
-                "type": "手杆"
+                "type": "任意"
             },
             "10.1会员": {
                 "任务": "使用 “喙啮动物” 诱饵在通古斯卡河或亚马逊河捕获七种鱼类",
@@ -403,9 +403,9 @@
                 "鱼种": ["美洲红点鲑", "粗壮红点鲑", "黑口红点鲑"],
                 "位置": "拉多加湖群岛",
                 "type": "路亚"
-            },"10.3会员": {
+            }, "10.3会员": {
                 "任务": "在挪威海捕获三种鲽鱼",
-                "鱼种": ["三种鲽鱼"],
+                "鱼种": ["鲽鱼", "长拟庸鲽", "长吻黄盖鲽"],
                 "位置": "挪威海",
                 "type": "任意"
             }
