feat: TeamCompetition-Dart

--- a/2024Christmas/index.html
+++ b/2024Christmas/index.html
@@ -378,7 +378,7 @@
                 "任务": "使用超轻鱼竿在廓里湖捕获8种类鱼",
                 "鱼种": null,
                 "位置": "廓里湖",
-                "type": "任意"
+                "type": "路亚"
             },
             "9.2会员": {
                 "任务": "手竿和强度不超过1.5公斤的鱼线捕获重量500克以上的鱼",
