delete: header_rotate & 2024Christmas

--- a/index.html
+++ b/index.html
@@ -1322,10 +1322,8 @@
         <h1><a name="目录" class="md-header-anchor"></a><span>目录</span></h1>
         <h2><a name="工具" class="md-header-anchor"></a><span>工具</span></h2>
         <ul>
-            <li><a href='./header'><span>Header</span></a></li>
-            <li><a href='./header_rotate'><span>Header ? </span><span style="transform: rotateX(180deg);display: inline-block;">🧐 ?</span></a></li>
-            <li><a href='./2024Christmas'><span>2024 Christmas🎄</span></a></li>
-            <li><a href='./TeamCompetition-Dart'><span>TeamCompetition-Dart🥇</span></a></li>
+            <li><a href='./header'><span>🎨 Header</span></a></li>
+            <li><a href='./TeamCompetition-Dart'><span>🥇 TeamCompetition-Dart</span></a></li>
         </ul>
     </div>
 </body>
