add: add TeamCompetition-Dart's favicon

--- a/TeamCompetition-Dart/index.html
+++ b/TeamCompetition-Dart/index.html
@@ -9,6 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team Competition Dart</title>
+    <link rel="icon" href="./icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css">
     <style>
         table {
