--- a/TeamCompetition-Dart/index.html
+++ b/TeamCompetition-Dart/index.html
@@ -74,6 +74,13 @@
             margin: 4px 2px;
             cursor: pointer;
             border-radius: 4px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        button>svg{
+            margin-right: 5px;
         }
 
         button:hover {
@@ -123,13 +130,25 @@
             margin-top: 20px;
             display: none;
         }
+
+        input{
+            text-align: center;
+        }
+
+        th{
+            text-align: center;
+        }
+
+        .select2-selection__rendered{
+            text-align: center;
+        }
     </style>
 </head>
 
 <body>
     <div id="content">
         <input type="text" id="title" value="" placeholder="标题"
-            style="width: 100%; font-size: 36px; font-weight: bold; padding: 8px;text-align: center;">
+            style="width: 100%; font-size: 36px; font-weight: bold; padding: 8px 0;text-align: center;">
         <h1 id="title-shot"></h1>
         <table>
             <thead>
@@ -213,9 +232,19 @@
             </tbody>
         </table>
     </div>
-    <div style="margin-top: 20px; text-align: right;">
-        <button id="clearData">🗑 清除数据</button>
-        <button id="screenShot">🖨 页面截图</button>
+    <div style="margin-top: 20px; display: flex;justify-content: flex-end;">
+        <button id="clearData">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+                <path
+                    d="M17 6H22V8H20V21C20 21.5523 19.5523 22 19 22H5C4.44772 22 4 21.5523 4 21V8H2V6H7V3C7 2.44772 7.44772 2 8 2H16C16.5523 2 17 2.44772 17 3V6ZM18 8H6V20H18V8ZM9 11H11V17H9V11ZM13 11H15V17H13V11ZM9 4V6H15V4H9Z">
+                </path>
+            </svg> 清除数据</button>
+        <button id="screenShot">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+                <path
+                    d="M3 3H5V5H3V3ZM7 3H9V5H7V3ZM11 3H13V5H11V3ZM15 3H17V5H15V3ZM19 3H21V5H19V3ZM19 7H21V9H19V7ZM3 19H5V21H3V19ZM3 15H5V17H3V15ZM3 11H5V13H3V11ZM3 7H5V9H3V7ZM10.6667 11L11.7031 9.4453C11.8886 9.1671 12.2008 9 12.5352 9H15.4648C15.7992 9 16.1114 9.1671 16.2969 9.4453L17.3333 11H20C20.5523 11 21 11.4477 21 12V20C21 20.5523 20.5523 21 20 21H8C7.44772 21 7 20.5523 7 20V12C7 11.4477 7.44772 11 8 11H10.6667ZM9 19H19V13H16.263L14.9296 11H13.0704L11.737 13H9V19ZM14 18C12.8954 18 12 17.1046 12 16C12 14.8954 12.8954 14 14 14C15.1046 14 16 14.8954 16 16C16 17.1046 15.1046 18 14 18Z">
+                </path>
+            </svg> 页面截图</button>
     </div>
 
     <div id="dataWeight" style="display: none;">
