--- a/header/index.html
+++ b/header/index.html
@@ -5,10 +5,12 @@
 	<meta charset="utf-8">
 	<title></title>
 	<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-	<link rel='stylesheet' href='https://chinese-fonts-cdn.deno.dev/packages/moon-stars-kai/dist/MoonStarsKai-Bold/result.css' /> 
+	<link rel="preload" href="https://cdn.jsdelivr.net/gh/wcze/rf@master/header/font.ttf"
+		as="font" type="font/ttf" crossorigin="anonymous">
 </head>
 
 <body>
+	<div class="loading-message">字体加载中...</div>
 	<input type="text" id="text-name" placeholder="请输入名称" value="" />
 	<input type="range" id="text-size" min="15" max="80" value="40">
 	<input type="range" id="text-letterSpacing" min="-15" max="80" value="0">
@@ -22,8 +24,6 @@
 		<p id="text-top-val">0</p>
 	</div>
 	<button id="download" onclick="downImg()">下载</button>
-
-	<div style="margin-top: 50px;">字体：<a href="https://chinese-font.netlify.app/zh-cn/">中文网字计划</a></div>
 </body>
 
 </html>
@@ -57,9 +57,23 @@
 			a.click();
 		});
 	}
+
+
+	const font = new FontFace('CustomFont', 'url(https://cdn.jsdelivr.net/gh/wcze/rf@master/header/font.ttf)');
+
+	font.load().then(function () {
+		document.querySelector('.loading-message').style.display = 'none';
+	}).catch(function (error) {
+		console.error('Font loading failed', error);
+	});
 </script>
 
 <style type="text/css">
+	@font-face {
+		font-family: font;
+		src: url('https://cdn.jsdelivr.net/gh/wcze/rf@master/header/font.ttf') format('truetype');
+		font-display: swap;
+	}
 
 	body {
 		display: flex;
@@ -112,8 +126,7 @@
 	}
 
 	#head-text {
-		font-family:'Moon Stars Kai';
-		text-shadow: 1px 1px 0px #cdecff;
+		font-family: font;
 	}
 
 	#__t {
