--- a/TeamCompetition-Dart/index.html
+++ b/TeamCompetition-Dart/index.html
@@ -3,6 +3,8 @@
 
 <script>
     const fish_data = ["C2超级怪胎", "丁克斯带形鲤", "丁克斯无鳞鲤", "丁克斯镜鲤", "丁鱥", "三刺鱼", "三花鲤鱼", "上口欧鳊", "东方欧鳊", "东西伯利亚茴鱼", "东西伯利亚鲟", "乌克兰七鳃鳗", "九棘刺", "亚口鱼", "亚洲胡瓜鱼", "亚速海拟鲤", "伊氏狼绵鳚", "俄罗斯梭吻鲈", "俄罗斯鲟", "内维红点鲑", "冰岛海扇蛤", "剑鱼", "勃氏西鲱", "匈红鲤（镜鲤）", "匈红鲤(鳞鲤)", "北大西洋长尾鳕", "北方蓝鳍金枪鱼", "北极红点鲑", "北极茴鱼", "北海平鲉", "半裸狼绵鳚", "单鳍鳕", "叉牙楔齿七鳃鳗", "哲罗鱼", "四白锦鲤", "图们江细鳞鲑", "图冈白鲑", "圆点五色锦鲤", "圆腹雅罗鱼", "圆鳍鱼", "堪察加虹鳟", "塞凡湖鳟", "多指鞭冠𩽾𩾌", "大口水牛鱼", "大菱鲆", "大西洋狼鳚", "大西洋银鲛", "大西洋鲑鱼", "大西洋鲭", "大西洋鲱", "大西洋鳕", "大鳞麻哈鱼", "大麻哈鱼", "大鼻软口鱼", "姥鲨", "宽鼻白鲑", "小体鲟", "小头睡鲨", "小白鮭", "小齿狼鱼", "尖吻平鲉", "帝王蟹", "带形镜鲤", "带形镜鲤(人面鲤)", "带形镜鲤(白化)", "常见拟鲤", "常见狗鱼", "常见鮈鱼", "常见鲃鱼", "平腹多刺魚", "库图拟鲤", "库尔斯多夫丁鱥", "庸鲽", "廓里湖白鲑", "廓里湖红点鲑", "拉多加湖湖泊白鲑", "拉多加白鲑", "拉多加鲑", "拉多加鲟", "拟鲌", "文鳊", "斑点月鱼", "斯维里河白鲑", "无鳞鲤", "无鳞鲤 （人面鲤）", "无鳞鲤（白化）", "普通鲤鱼", "极北鳐", "框形镜鲤", "框形镜鲤（人面鲤）", "框形镜鲤（白化）", "梅花鲈", "梭鲈鱼", "棱鲱", "橙黄金锦鲤", "欧洲六须鲇", "欧洲康吉鳗", "欧洲无须鳕", "欧洲鱿鱼", "欧洲鳇", "欧白鲑", "欧飘鱼", "欧鲌", "欧鳊", "武克希白鲑", "江鳕", "沃尔霍夫白鲑", "沙丁鱼", "河斑马纹贻贝", "河螯虾", "波斯鲟", "波罗的海鲟鱼", "泥鳅", "海平鲉", "湖大吻鱥", "湖拟鲤", "湖鱥", "湖鳟鱼", "牙鳕", "牡蛎", "犬首鮈", "珠星三块鱼", "珠蚌", "瓦拉姆白鲑", "白化鲃鱼", "白化鲇鱼", "白北鲑", "白斑红点鲑", "白斑角鲨", "白眼欧鳊", "白鲑鱼", "皱鳃鲨", "真柱白鲑", "短头梭鲃", "短角大杜父鱼", "石斑鱼", "秋白鲑", "穆松白鲑", "竹刀鱼", "粉鲑", "粗壮红点鲑", "红大麻哈鱼", "红白锦鲤", "红鳍鱼", "细鳞鲑", "绯写锦鲤", "绵鳚", "绿青鳕", "美洲红点鲑", "胡瓜鱼", "花狼鱼", "花羔红点斑鲑", "花鲶", "茴鱼", "草鱼", "莱文氏红点鲑", "莱芒湖白鲑", "葛氏鲈塘鳢", "董氏须鳅", "蒙古红鲌", "蓝魣鳕", "蓝鳕", "虹鳟", "裸腹鲟", "西伯利亚小体鲟", "西伯利亚杜父鱼", "诸子鲦", "贝加尔白鲑", "贝加尔雅罗鱼", "贻贝", "赤梢鱼", "达氏鳇", "里海七鳃鳗", "里海拟鲤", "里海西鲱", "里海鲑鱼", "金丁鱥", "金鲫", "钓𩽾𩾌", "钝头鳐", "银鲫", "银鲷鱼", "银鳟鱼", "镜鲤", "镜鲤（人面鲤）", "镜鲤（白化）", "长体西鲱", "长吻梅花鲈", "长吻黄盖鲽", "长拟庸鲽", "闪光鲟", "雅罗鱼", "雷氏七鳃鳗", "青蛙", "青鳕", "食用蟹", "马舌鲽", "马苏大麻哈鱼", "马苏鱼", "驼背太阳鱼", "驼背白鲑", "高白鲑", "魣鳕", "鲈鱼", "鲢鱼", "鲤鲫", "鲽鱼", "鳗鱼", "鳙鱼", "鳞鲤(人面鲤)", "鳞鲤(白化)", "鳟鱼", "鸣海浅黄锦鲤", "黄斑红点鲑", "黑口红点鲑", "黑尾叉牙七鳃鳗", "黑库图拟鲤", "黑海欧洲鰉", "黑海欧白鱼", "黑牛胭脂鱼", "黑白鲑", "黑线鳕", "黑背西鲱", "黑长鲳", "黑鲩", "鼠鲨"];
+
+    const fish_image = ["s_freaks", "din_l_carp", "din_n_carp", "din_m_carp", "tench", "stickleback_threesp", "common_carp", "b_bream", "e_bream", "os_grayling", "zs_sturgeon", "u_lamprey", "stickleback_ninesp", "chukuchan", "a_smelt", "taran", "lycodes_e", "barsch", "r_sturgeon", "neiva", "chlamys_isl", "x_gladius", "b_herring", "m_carp_red", "carp_red", "macrourus_b", "thynnus_t", "a_char", "zs_grayling", "sebastes_n", "lycodes_s", "menek", "trid_lamprey", "taimen", "yotsushiro", "lenok_t", "tugun", "m_goshiki", "s.orfe", "pinagor", "mikija", "sevan_trout", "himant_g", "buffalo", "turbot", "p_zubatka", "chimaera", "a_salmon", "makrel", "atl_herring", "atl_cod", "chavycha", "keta", "c_nase", "cetorhinus_m", "chir", "sterlet", "somniosus_m", "syb_vendace", "d_zubatka", "sebastes_m", "rk_crab", "l_carp", "l_carp_ghost", "l_carp_albino", "c.roach", "n.pike", "gudgeon", "c_barbel", "stickleback_ss", "kutum", "kw_tench", "halibut_w", "sig_kuor", "chartus_kuoriius", "sig_o_l", "ripus", "l_salmon", "l_sturgeon", "shemaya", "v_bream", "lampris_g", "sv_sig", "n_carp", "n_carp_ghost", "n_carp_albino", "carp", "ambl_h", "r_carp", "r_carp_ghost", "r_carp_albino", "ruffe", "e.pikeperch", "tiulka", "o_ogon", "w_catfish", "conger", "merluza", "c_squid", "beluga", "vendace", "sabrefish", "c_bleak", "bream", "sig_vouksa", "burbot", "sig", "sardina_p", "dreissena", "crawfish", "p_sturgeon", "osetr_balt", "vjun", "red_fish", "l_minnow", "syb_roach", "golyan", "gc_smelt", "merlang", "ostrea_ed", "syb_gudgeon", "trib_h", "freshwater_mussel", "sig_valaam", "alb_barbel", "w_catfish_a", "nelma", "kunja", "katran", "wa_bream", "wfish", "c_anguineus", "valyok", "sh_barbel", "m_scorpius", "polyprion", "a_omul", "muksun", "s_saurus", "gorbusha", "palia_lud", "nerka", "kohaku", "rudd", "lenok_o", "hi_utsri", "zoarces_v", "coalfish", "salvel_l", "e_smelt", "m_zubatka", "malma", "a_catfish", "a_grayling", "g_carp", "golets_lev", "sig_ludoga", "a.sleeper", "barb_toni", "chan_m", "molva", "poutassou", "riv_rb_trout", "osetr_ship", "syb_sterlet", "bullhead_syb", "e.chub", "b_omul", "syb_elets", "mytilus_ed", "asp", "kaluga", "c_lamprey", "vobla", "c_herring", "k_salmon", "g_tench", "c.carp", "lophius_p", "ambl_r", "crucian", "s.bream", "kijuch", "m_carp", "m_carp_ghost", "m_carp_albino", "cha_herring", "ruffe_n", "lh_kambala", "hippoglos_p", "st_sturgeon", "dace", "fe_lamprey", "frog", "pollachius", "ed_crab", "halibut_b", "onkor_mg", "onkor_m", "pumps_sunfish", "sig_p", "peled", "m_molva", "perch", "s_carp", "karasekarp", "sea_kambala", "eel", "bh_carp", "carp_ghost", "carp_albino", "riv_brown_trout", "n_asagi", "dr_char", "palia_kr", "s_lamprey", "vyrezub", "ch_beluga", "shemaya_cha", "bl_buffalo", "sig_black", "piksha", "k_herring", "centroloph_n", "b_carp", "lamna_n"];
 </script>
 
 <head>
@@ -23,6 +25,7 @@
             border: 1px solid #ddd;
             padding: 8px;
             text-align: left;
+            position: relative;
         }
 
         th {
@@ -42,7 +45,8 @@
             border: none;
             font-size: 16px;
             width: 100%;
-            height: 1.6em;
+            height: 30px;
+            margin: 6px 0;
         }
 
         th>input {
@@ -123,6 +127,10 @@
             font-weight: bold;
         }
 
+        #title {
+            height: 1.6em;
+        }
+
         #title-shot {
             font-size: 36px;
             font-weight: bold;
@@ -141,6 +149,18 @@
 
         .select2-selection__rendered {
             text-align: center;
+        }
+
+        .fish_image {
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
+            height: 60.8px;
+            width: 60.8px;
+            transform: scaleX(-1);
+            position: absolute;
+            left: 0;
+            top: 0;
         }
     </style>
 </head>
@@ -177,6 +197,7 @@
                 <tr>
                     <td>
                         <select class="searchable-select"></select>
+                        <div class="fish_image"></div>
                     </td>
                     <td><input type="text" value="" class="targetValue"></td>
                     <td><input type="text" value="" class="varianceValue" disabled></td>
@@ -189,6 +210,7 @@
                 <tr>
                     <td>
                         <select class="searchable-select"></select>
+                        <div class="fish_image"></div>
                     </td>
                     <td><input type="text" value="" class="targetValue"></td>
                     <td><input type="text" value="" class="varianceValue" disabled></td>
@@ -201,6 +223,7 @@
                 <tr>
                     <td>
                         <select class="searchable-select"></select>
+                        <div class="fish_image"></div>
                     </td>
                     <td><input type="text" value="" class="targetValue"></td>
                     <td><input type="text" value="" class="varianceValue" disabled></td>
@@ -213,6 +236,7 @@
                 <tr>
                     <td>
                         <select class="searchable-select"></select>
+                        <div class="fish_image"></div>
                     </td>
                     <td><input type="text" value="" class="targetValue"></td>
                     <td><input type="text" value="" class="varianceValue" disabled></td>
@@ -431,6 +455,13 @@
             $('select').on('change', function () {
                 saveData();
                 dataWeight();
+                const selectedIndex = $(this).prop('selectedIndex') - 1;
+                const fishImageDiv = $(this).siblings('.fish_image');
+                if (selectedIndex >= 0) {
+                    fishImageDiv.css('background-image', `url("https://cn.rf4-stat.ru/images/rf4game/${fish_image[selectedIndex]}.png")`);
+                } else {
+                    fishImageDiv.css('background-image', 'none');
+                }
             });
 
             $('input[class^="v-"]').on('click', function () {
