--- a/index.html
+++ b/index.html
@@ -1322,7 +1322,7 @@
         <h1><a name="目录" class="md-header-anchor"></a><span>目录</span></h1>
         <h2><a name="工具" class="md-header-anchor"></a><span>工具</span></h2>
         <ul>
-            <li><a href='./header'><span>🎨 Header</span></a></li>
+            <li><a href='./header'><span>🖼️ Header</span></a></li>
             <li><a href='./TeamCompetition-Dart'><span>🥇 TeamCompetition-Dart</span></a></li>
         </ul>
     </div>
